--- a/app/public/index.html
+++ b/app/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <!-- set `maximum-scale` for some compatibility issues -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
   <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
   <style>
     html, body, #root{ 
